# dolphin

./: Cargo.toml  README.md  build_release.sh  profile_engine.sh
dolphin_core/: Cargo.toml
dolphin_core/src/: attack_checker.rs  bitboard.rs  board.rs  castle_permissions.rs  evaluate.rs  fen.rs  lib.rs  mov.rs  move_gen.rs  move_list.rs  occupancy_masks.rs  piece.rs  position.rs  position_history.rs  search.rs  square.rs  tt.rs  zobrist_keys.rs
dolphin_core/src/board/: bitboard.rs  colour.rs  file.rs  game_board.rs  material.rs  mod.rs  occupancy_masks.rs  piece.rs  rank.rs  square.rs  types.rs
dolphin_core/src/core/: array_offset.rs  mod.rs
dolphin_core/src/io/: fen.rs
dolphin_core/src/moves/: mod.rs  mov.rs  move_gen.rs  move_list.rs  move_types.rs
dolphin_core/src/position/: attack_checker.rs  castle_permissions.rs  game_position.rs  mod.rs  move_counter.rs  position_history.rs  zobrist_keys.rs
dolphin_core/src/search/: alpha_beta.rs  evaluate.rs  mod.rs  tt.rs
dolphin_core/src/search_engine/: evaluate.rs  mod.rs  search.rs  tt.rs
dolphin_engine/: Cargo.toml
dolphin_engine/src/: main.rs
perft/: Cargo.toml
perft/src/: epd_parser.rs  main.rs  perft_runner.rs
src/: bitboard.rs  board.rs  fen.rs  main.rs  move.rs  move_gen.rs  moves.rs  occupancy_masks.rs  piece.rs  position.rs  square.rs  util.rs  utils.rs
src/board/: bitboard.rs  board.rs  gen_occ_masks.rs  mod.rs  occupancy_masks.rs  piece.rs  square.rs
src/components/: bitboard.rs  board.rs  gen_occ_masks.rs  occupancy_masks.rs  piece.rs  square.rs
src/core/: core_traits.rs  mod.rs
src/engine/: attack_checker.rs  castle_permissions.rs  evaluate.rs  hash.rs  hash_seed.rs  mod.rs  position.rs  position_history.rs
src/input/: fen.rs
src/input/uci/: mod.rs  protocol_handler.rs
src/moves/: mod.rs  mov.rs  move_gen.rs  move_list.rs  mv.rs
src/perft/: epd_parser.rs  mod.rs  perft_runner.rs  perftsuite.epd
src/position/: attack_checker.rs  castle_permissions.rs  evaluate.rs  hash.rs  mod.rs  position.rs  position_history.rs
src/resources/: perf_notes
