[package]
name = "dolphin"
version = "0.1.0"
authors = ["eddie"]

[dependencies]
rand = "0.7.3"
lazy_static = "1.4.0"
typenum = "1.12.0"
num = "0.3.0"
enum_primitive = "0.1.1"
num-traits = "0.2.14"
num-derive = "0.3.3"
core_affinity = "0.5.10"
num-format = "0.4.0"

[profile.release]
lto = true
codegen-units = 1
debug = false
opt-level=3
overflow-checks=false



